# cadcam-ui

./: .env.example  CLAUDE.md  README.md  package.json
.claude/: settings.local.json
api-server/: Cargo.toml  config.example.toml
api-server/src/: config.rs  lib.rs  main.rs
api-server/src/db/: mod.rs  program.rs
api-server/src/db/schema/: active_programs.sql
src/: app.css  app.tsx
src/components/: DataTable.css  DataTable.tsx  Dropdown.css  Dropdown.tsx  ThemeToggle.tsx  ToolsDropdown.tsx
src/contexts/: ThemeContext.tsx
src/lib/: api-handler.ts  database.ts  db-config.ts  types.ts
src/routes/: [...404].tsx  boomi.tsx  cds.tsx  index.tsx  part_ops.tsx  renamed_demand.tsx
src/routes/api/: part_ops.ts  programs.ts
src/routes/api/program/: [id].ts
src/styles/: AppLayout.css  PageLayout.css  PartOps.css  themes.css
