[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["query", "json", "tokio"] }
bb8 = "0.9.0"
bb8-tiberius = "0.16.0"
chrono = { version = "0.4.41", features = ["serde"] }
fern = { version = "0.7.1", features = ["colored", "date-based"] }
humantime = "2.2.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tiberius = { version = "0.12.3", features = [
    "chrono",
    "tokio",
    "sql-browser-tokio",
] }
tokio = { version = "1.46.1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
] }
tokio-util = { version = "0.7.15", features = ["compat"] }
toml = { version = "0.9.1", features = ["parse", "serde"] }
